# coding-challenge

1-algorythms/: README.md  main.py
2-application/: README.md
2-application/backend/: README.md  db.sqlite  main.py  models.py  pyproject.toml
2-application/backend/app/: database.py  insert_sample_data.py  main.py  models.py  schema.py
2-application/frontend/: package-lock.json  package.json
2-application/frontend/src/: App.tsx
2-application/frontend/src/assets/: App.backup.tsx
