[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kirill <kirill.chuprov@cambri.io>"]
readme = "README.md"

[tool.poetry.scripts]
start = "app.main:start"
insert-sample-data = "app.insert_sample_data:insert_sample_data"

[tool.poetry.dependencies]
python = "^3.08"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
